[gd_scene load_steps=5 format=3 uid="uid://b7gxr642eirfj"]

[ext_resource type="Script" uid="uid://bde3l3wtg1s02" path="res://scripts/signup.gd" id="1_4vokp"]
[ext_resource type="FontFile" uid="uid://bfawprnajfbaw" path="res://Assets/Fonts/CleanPlate.fnt" id="2_2sqka"]
[ext_resource type="FontFile" uid="uid://durpk3530uu50" path="res://Assets/Fonts/BasicPupWhite.fnt" id="3_vfncv"]
[ext_resource type="FontFile" uid="uid://d3cs80n8io813" path="res://Assets/Fonts/CleanVictory.fnt" id="4_nj2e1"]

[node name="Signup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vokp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.8
offset_left = -5.0
offset_top = 0.399994
offset_right = 6.0
offset_bottom = 149.6

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
placeholder_text = "Enter your name"

[node name="EmailLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Email:"

[node name="EmailEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
placeholder_text = "Enter your email"
virtual_keyboard_type = 1

[node name="PasswordLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Password:"

[node name="PasswordEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter your password"
virtual_keyboard_type = 2
secret = true

[node name="AgeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Age:"

[node name="AgeEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
placeholder_text = "Enter your age"
virtual_keyboard_type = 3

[node name="CountryLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Country:"

[node name="CountryOption" type="OptionButton" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_vfncv")

[node name="GenderLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Gender:"

[node name="GenderRadioContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MaleCheck" type="CheckBox" parent="Panel/VBoxContainer/GenderRadioContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Male"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer/GenderRadioContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 11.54

[node name="FemaleCheck" type="CheckBox" parent="Panel/VBoxContainer/GenderRadioContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Female"

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer/GenderRadioContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 11.54

[node name="OtherCheck" type="CheckBox" parent="Panel/VBoxContainer/GenderRadioContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2sqka")
text = "Other"

[node name="SpacerAfterGender" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="GuestButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("3_vfncv")
text = "Guest"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateUserButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_nj2e1")
text = "Create User"

[node name="CallToActionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_nj2e1")
text = "Registered users get: highscore tracking, special rewards! "
horizontal_alignment = 2

[node name="LoginButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_vfncv")
text = "Already have user? Login (Users get special rewards!)"

[node name="FeedbackLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = " "
horizontal_alignment = 2

[node name="ConsentContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ConsentCheckbox" type="CheckBox" parent="Panel/VBoxContainer/ConsentContainer"]
layout_mode = 2
text = "I accept the privacy policy and data collection"

[node name="PrivacyButton" type="Button" parent="Panel/VBoxContainer/ConsentContainer"]
layout_mode = 2
text = "Read Privacy Policy"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
